fix(header): wrap search drawer in container

--- a/components/header/src/Header.module.scss
+++ b/components/header/src/Header.module.scss
@@ -189,7 +189,22 @@
     }
   }
 
+  .SearchDrawerContainer {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    margin: auto;
+    max-width: $breakpoint-xl;
+    z-index: 11;
+
+    @media (min-width: $breakpoint-sm) {
+      top: auto;
+    }
+  }
+
   .SearchDrawer {
+    position: absolute;
     padding: 30px;
 
     @media (min-width: $breakpoint-sm) {
